Fix: Bad Letter Spacing

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -798,6 +798,7 @@ a:hover, a:focus {
 #leftsidebar {
   text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
   text-rendering: optimizelegibility;
+  letter-spacing: 0.075rem;
 
   .menu li a span {
     margin-top: 7.5px;
